tests/ui/07-fail-bitfield-fields-none.stderr
error: no rules expected the token `field`
 --> tests/ui/07-fail-bitfield-fields-none.rs:6:1
  |
6 | / bitfield! {
7 | |     struct BitNone(u8);
8 | |     bool, _, _: 0;
9 | | }
  | |_^ no rules expected this token in macro call
  |
  = note: this error originates in the macro `$crate::bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)

error: no rules expected the token `field`
  --> tests/ui/07-fail-bitfield-fields-none.rs:11:1
   |
11 | / bitfield! {
12 | |     struct BitsNone(u8);
13 | |     u8, _, _: 0;
14 | | }
   | |_^ no rules expected this token in macro call
   |
   = note: this error originates in the macro `$crate::bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
